libs/bng/test/negative/N0240_rxn_component_state_not_set.bngl
# FAIL
# OUTPUT: error: Molecule used as pattern in reaction rule: Component(s) p missing from molecule A(a).
# OUTPUT: error: Molecule created in reaction rule: Component(s) p missing from molecule A(a). Reported for reaction in the reverse direction.

# NOTE: BNG2.pl reports Molecule created in reaction rule: State of component p of molecule A(a!1,p) must be set
# TODO: our check is probably wrong, it seems that adding component should be fine  

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a) + A(a) <-> A(a!1,p).A(a!1) kp, km
end reaction rules
